# taurus

./: .env-example  .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  README.md  build.rs  renovate.json
.github/workflows/: build-and-test.yml  ci.yml
crates/core/: Cargo.toml
crates/core/src/: lib.rs  value.rs
crates/core/src/context/: argument.rs  context.rs  executor.rs  macros.rs  registry.rs  signal.rs
crates/core/src/context/executor/: arguments.rs  execution_loop.rs  formatting.rs  mod.rs  node_execution.rs  tests.rs
crates/core/src/debug/: mod.rs  render.rs  trace.rs  tracer.rs
crates/core/src/runtime/: mod.rs
crates/core/src/runtime/error/: mod.rs
crates/core/src/runtime/functions/: array.rs  boolean.rs  control.rs  http.rs  mod.rs  number.rs  object.rs  text.rs
crates/core/src/runtime/remote/: mod.rs
crates/manual/: Cargo.toml
crates/manual/src/: main.rs
crates/taurus/: Cargo.toml
crates/taurus-core/: Cargo.toml
crates/taurus-core/src/: ERROR_CODES.md  lib.rs  time.rs  value.rs
crates/taurus-core/src/handler/: argument.rs  macros.rs  mod.rs  registry.rs
crates/taurus-core/src/runtime/: engine.rs  mod.rs
crates/taurus-core/src/runtime/engine/: compiler.rs  emitter.rs  executor.rs  model.rs
crates/taurus-core/src/runtime/execution/: mod.rs  registry.rs  render.rs  store.rs  trace.rs  tracer.rs  value_store.rs
crates/taurus-core/src/runtime/functions/: array.rs  boolean.rs  control.rs  http.rs  mod.rs  number.rs  object.rs  text.rs
crates/taurus-core/src/runtime/remote/: mod.rs
crates/taurus-core/src/types/: exit_reason.rs  mod.rs  signal.rs
crates/taurus-core/src/types/errors/: error.rs  mod.rs  runtime_error.rs
crates/taurus-core/src/types/execution/: bindings.rs  flow_ir.rs  ids.rs  mod.rs  signature.rs
crates/taurus-manual/: Cargo.toml
crates/taurus-manual/src/: main.rs
crates/taurus-provider/: Cargo.toml
crates/taurus-provider/src/providers/: mod.rs
crates/taurus-provider/src/providers/emitter/: mod.rs  nats_emitter.rs
crates/taurus-provider/src/providers/remote/: mod.rs  nats_remote_runtime.rs
crates/taurus-tests/: Cargo.toml  README.md
crates/taurus-tests/src/: main.rs
crates/taurus/src/: main.rs
crates/taurus/src/app/: mod.rs  worker.rs
crates/taurus/src/client/: mod.rs  runtime_execution.rs  runtime_status.rs  runtime_usage.rs
crates/taurus/src/config/: mod.rs
crates/taurus/src/remote/: mod.rs
crates/taurus/src/telemetry/: metrics.rs  mod.rs
crates/tests/: Cargo.toml
crates/tests-core/: Cargo.toml
crates/tests-core/src/: lib.rs
crates/tests/flows/: 01_return_object.json  02_return_flow_input.json  03_for_each.json
crates/tests/src/: main.rs
definitions/: boolean.md  number.md  text.md
definitions/data_types/: array.md  node.md  primitive.md  type.md
definitions/functions/: boolean-audit.md  boolean.md  number-audit.md  number.md  text-audit.md  text.md
definitions/functions/array/: array.md
definitions/functions/object/: object.md
definitions/functions/primitive/: boolean.md  text-audit.md
definitions/runtime_functions/array/: array-audit.md  array.md
definitions/runtime_functions/object/: object-audit.md  object.md
definitions/runtime_functions/primitive/: boolean-audit.md  boolean.md  number-audit.md  number.md  text.md
docs/: dev.md  errors.md  index.mdx  installation.mdx  meta.json
flows/: 01_return_object.json  02_return_flow_input.json  03_for_each.json  04_example_action.json  05_if_control.json  06_if_else_control.json  07_simple_return.json  08_flow_level_return.json  09_filter_return.json  10_multiple_respond.json  11_function_subflow.json  12_for_each_function_subflow.json
src/: configuration.rs  main.rs
src/config/: mod.rs
src/context/: executor.rs  mod.rs  registry.rs  signal.rs
src/error/: mod.rs
src/executor/: mod.rs
src/functions/std/math/: mod.rs
src/implementation/: array.rs  boolean.rs  control.rs  http.rs  mod.rs  number.rs  object.rs  text.rs
src/implementation/number/: mod.rs
src/locale/: code.rs  locale.rs  mod.rs
src/registry/: mod.rs
taurus/: Cargo.toml
taurus/src/: main.rs
taurus/src/context/: argument.rs  context.rs  executor.rs  macros.rs  mod.rs  registry.rs
taurus/src/debug/: mod.rs  trace.rs  tracer.rs
taurus/src/implementation/: array.rs  boolean.rs  control.rs  http.rs  mod.rs  number.rs  object.rs  text.rs
taurus_poc/: Cargo.toml  build.rs  main.rs  poc.txt
taurus_poc/src/: main.rs
taurus_queue/: Cargo.toml
taurus_queue/src/: lib.rs
translation/: de-DE.json  de-DE.toml  en-US.json  en-US.toml
