[workspace]
members = ["taurus"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
code0-flow = { version = "0.0.24" }
tucana = { version = "0.0.43" }
tokio = { version = "1.44.1", features = ["rt-multi-thread", "signal"] }
log = "0.4.27"
futures-lite = "2.6.0"
rand = "0.9.1"
base64 = "0.22.1"
env_logger = "0.11.8"
async-nats = "0.46.0"
prost = "0.14.1"
tonic-health = "0.14.1"
tonic = "0.14.1"
