[workspace]
members = [ "crates/core", "crates/taurus", "crates/tests" ]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
async-trait = "0.1.89"
code0-flow = { version = "0.0.28" }
tucana = { version = "0.0.65" }
tokio = { version = "1.44.1", features = ["rt-multi-thread", "signal"] }
log = "0.4.27"
futures-lite = "2.6.0"
rand = "0.10.0"
base64 = "0.22.1"
env_logger = "0.11.8"
async-nats = "0.46.0"
prost = "0.14.1"
tonic-health = "0.14.1"
tonic = "0.14.1"
serde_json = "1.0.149"
serde = "1.0.228"

[workspace.dependencies.taurus-core]
path = "./crates/core"
