[package]
name = "taurus"
version = "0.1.0"
edition = "2024"

[dependencies]
code0-flow = { workspace = true, features = ["flow_service"] }
tucana = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
futures-lite ={ workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
env_logger = { workspace = true }
async-nats = { workspace = true }
prost = { workspace = true }
tonic-health = { workspace = true }
tonic = { workspace = true }
