[package]
name = "taurus-core"
version.workspace = true
edition.workspace = true

[dependencies]
tucana = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
log = { workspace = true }
futures-lite = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }
ureq = { workspace = true }
