[package]
name = "taurus-provider"
version.workspace = true
edition.workspace = true

[dependencies]
code0-flow = { workspace = true, features = ["flow_service"] }
tucana = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
futures-lite = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
env_logger = { workspace = true }
async-nats = { workspace = true }
prost = { workspace = true }
tonic-health = { workspace = true }
tonic = { workspace = true }
taurus-core = { workspace = true }
