[package]
name = "taurus"
version.workspace = true
edition.workspace = true

[dependencies]
code0-flow = { workspace = true, features = ["flow_service", "flow_health", "flow_config", "flow_telemetry"] }
tucana = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
opentelemetry = { workspace = true }
futures-lite ={ workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
async-nats = { workspace = true }
prost = { workspace = true }
tonic-health = { workspace = true }
tonic = { workspace = true }
taurus-core = { workspace = true }
taurus-provider = { workspace = true }

[dev-dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
